Sat May 01 00:59:12 UTC 2010  Trevor Fields  <fields_t@ociweb.com>

        * performance-tests/Bench/bin/gen-latency-tables.pl:
        * performance-tests/Bench/bin/gen-run-info-table.pl:
        * performance-tests/Bench/bin/gen-throughput-tables.pl:
        * performance-tests/Bench/bin/generate-perf-html.sh:
        * performance-tests/Bench/tools/formatting.css:

          Adding scripts for generating html pages from results.

        * performance-tests/Bench/bin/extract-throughput.pl:
        * performance-tests/Bench/bin/plot-throughput-testformats.gp:
        * performance-tests/Bench/bin/plot-throughput-transports.gp:

          Changed the output of extract-throughput.pl to use commas and added
          test type and transport fields.

Wed Apr 28 21:15:01 UTC 2010  Mike Martinez  <martinez_m@ociweb.com>

        * performance-tests/Bench/bin/gen-latency-stats.pl:

          Use zero-based array indices correctly.

        * performance-tests/Bench/bin/plot-density.gp:

          Removed incorrect hop adjustment.

        * performance-tests/Bench/bin/plot-jitter.gp:
        * performance-tests/Bench/bin/plot-transports.gp:

          Migrated to robust statistics.

        * performance-tests/Bench/bin/plot-quantiles.gp:

          Removed incorrect hop adjustment.


        * performance-tests/Bench/bin/reduce-latency-data.pl:

          Corrected a minor formatting annoyance.

        * performance-tests/Bench/tools/plot-latency.gp:

          Added kernel density and quantile plots to generated results.

Wed Apr 28 19:50:16 UTC 2010  Mike Martinez  <martinez_m@ociweb.com>

        * performance-tests/Bench/bin/extract-latency.pl:

          Updated documentation to be correct after adding the Median and
          Median absolute deviation statistical data.

        * performance-tests/Bench/bin/gen-latency-stats.pl:

          Updated generated GNUPlot statistical legend data to contain